# neural-snake

./: .python-version  CLargs.py  Evolution.py  Organism.py  Population.py  README.md  Run.py  Snake.py  Snake_computation.py  Snake_game.py  Visualise.py  game.py  generate_cProfile.py  profile_output  pyproject.toml
.ipynb_checkpoints/: Snake debug-checkpoint.ipynb  neural snake-checkpoint.ipynb
